Fixed some layout issues

--- a/src/style/scss/components/chat.scss
+++ b/src/style/scss/components/chat.scss
@@ -94,7 +94,7 @@ textarea {
   }
 .active-chats{
     background-color: #fff;
-    
+ 
 }
 
 .time-col{
@@ -109,7 +109,7 @@ textarea {
     p{
         color:$FontColor;
         font-weight: bold;
-        font-size: 1.2rem;
+        font-size: 1rem;
     }
     .tabs {
         margin-bottom: 0 !important;
